
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int atoi (char*) ;
 scalar_t__ strtok (char*,char*) ;

void exploreip(char *ip, int (*ipnum)[4]){
 char *wsk;

 wsk=(char *)strtok(ip,".");
 (*ipnum)[0]=atoi(wsk);
 wsk=(char *)strtok(((void*)0),".");
 (*ipnum)[1]=atoi(wsk);
 wsk=(char *)strtok(((void*)0),".");
 (*ipnum)[2]=atoi(wsk);
 wsk=(char *)strtok(((void*)0),".");
 (*ipnum)[3]=atoi(wsk);
}
