; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_35061.c_exploreip.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_35061.c_exploreip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c".\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @exploreip(i8* %0, [4 x i32]* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca [4 x i32]*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store [4 x i32]* %1, [4 x i32]** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 @strtok(i8* %6, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %8 = inttoptr i64 %7 to i8*
  store i8* %8, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @atoi(i8* %9)
  %11 = load [4 x i32]*, [4 x i32]** %4, align 8
  %12 = getelementptr inbounds [4 x i32], [4 x i32]* %11, i64 0, i64 0
  store i32 %10, i32* %12, align 4
  %13 = call i64 @strtok(i8* null, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %14 = inttoptr i64 %13 to i8*
  store i8* %14, i8** %5, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @atoi(i8* %15)
  %17 = load [4 x i32]*, [4 x i32]** %4, align 8
  %18 = getelementptr inbounds [4 x i32], [4 x i32]* %17, i64 0, i64 1
  store i32 %16, i32* %18, align 4
  %19 = call i64 @strtok(i8* null, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %20 = inttoptr i64 %19 to i8*
  store i8* %20, i8** %5, align 8
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @atoi(i8* %21)
  %23 = load [4 x i32]*, [4 x i32]** %4, align 8
  %24 = getelementptr inbounds [4 x i32], [4 x i32]* %23, i64 0, i64 2
  store i32 %22, i32* %24, align 4
  %25 = call i64 @strtok(i8* null, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %26 = inttoptr i64 %25 to i8*
  store i8* %26, i8** %5, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = call i32 @atoi(i8* %27)
  %29 = load [4 x i32]*, [4 x i32]** %4, align 8
  %30 = getelementptr inbounds [4 x i32], [4 x i32]* %29, i64 0, i64 3
  store i32 %28, i32* %30, align 4
  ret void
}

declare dso_local i64 @strtok(i8*, i8*) #1

declare dso_local i32 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
